--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -126,3 +126,160 @@ public:
 };
 ```
 直接调用sort函数进行
+
+#### 只出现一次的数字
+https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x21ib6/
+
+要求是线性时间、不占额外内存；
+
+线性时间就可以想到利用排序，减少遍历复杂度；
+如果没额外内存限制的话，就可以利用哈希表或者集合，记录键值。
+
+```
+class Solution {
+public:
+    int singleNumber(vector<int>& nums) {
+        // unordered_map<int,int> keys;
+        sort(nums.begin(),nums.end());
+        bool pre=true;
+        for(int j=0;j<nums.size()-1;j++){
+            if(nums[j]!=nums[j+1]){
+                if(pre) return nums[j];
+                pre=true;
+            
+            }
+            else{
+                pre=false;
+
+            }
+        }
+        return nums[nums.size()-1];
+
+    }
+};
+```
+另外一种方法：【**位运算**】
+思路比较绝，后续可以借鉴一下：使用两元素的异或XOR操作，整个数组的XOR操作即可得到没有重复的数字；
+```
+class Solution {
+public:
+    int singleNumber(vector<int>& nums) {
+
+        int res=0;
+        for(auto j: nums){
+            res^=j;
+        }
+        return res;
+
+    }
+};
+```
+
+
+#### 350. 两个数组的交集2
+https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x2y0c2/
+
+允许有重复的数字，计算两个数组所有重复的数字(数字本身就是可以重复)
+
+所以不用考虑使用集合，可以通过哈希表/排序+双指针来完成。
+
+- 双指针遍历排完序的两个数组：
+  时间复杂度分析：排序复杂度O(mlogm+nlogn)；数组遍历O(m+n);总复杂度O(mlogm+nlogn);
+  空间复杂度：记录结果的数组O(min(m,n))，使用STL.vector会到O(1)
+
+```
+class Solution {
+public:
+    vector<int> intersect(vector<int>& nums1, vector<int>& nums2) {
+        sort(nums1.begin(),nums1.end());
+        sort(nums2.begin(),nums2.end());
+        
+        int index=0,index2=0;
+        int len=nums1.size();
+        int len2=nums2.size();
+        vector<int> res;
+        while(index<len&&index2<len2){
+            if(nums1[index]==nums2[index2]){
+                res.push_back(nums1[index]);
+                index++;
+                index2++;
+            }
+            else if(nums1[index]<nums2[index2]){
+                index++;
+            }
+            else if(nums1[index]>nums2[index2]){
+                index2++;
+            }
+        }
+        return res;
+        }
+};
+```
+- 使用哈希表，unordered_map,记录短表的元素值和频次；
+- 将长表和哈希表进行遍历，对哈希表进行元素删减，并保存相同元素。
+- 与上个方法比利用哈希表的遍历能力，优化了算法：
+    - 时间复杂度： 遍历数组操作O(m+n)，哈希表搜索O(1),总体O(m+n)
+    - 空间复杂度: O(min(m,n))
+```
+class Solution {
+public:
+    vector<int> intersect(vector<int>& nums1, vector<int>& nums2) {
+        if(nums1.size()>nums2.size()){
+            intersect(nums2,nums1);
+        }
+        vector<int> res;
+        unordered_map<int,int> map;
+        for(auto n:nums1) map[n]++;
+        for(auto n:nums2){
+            if(map.count(n)){
+                res.push_back(n);
+                map[n]--;
+            }
+            if(map[n]==0){
+                map.erase(n);
+            }
+
+        }
+
+        return res;
+        }
+};
+```
+### 加一
+https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x2cv1c/
+
+- 数组遍历+1；对于临界情况进行额外考虑，即头部需要插入新元素
+    复杂度分析： 时间复杂度O(m) 插入复杂度O(1)(vector insert)
+```
+class Solution {
+public:
+    <!-- void reverse(vector<int>& digits){
+        int start=0;
+        int end=digits.size()-1;
+        while(start<end){
+            int tmp=digits[start];
+            digits[start]=digits[end];
+            digits[end]=tmp;
+            start++;
+            end--;
+        }
+    } -->
+    vector<int> plusOne(vector<int>& digits) {
+        bool next=false;
+        for(int i=digits.size()-1;i>=0;i--){
+            digits[i]++;
+            if (digits[i]==10){
+                digits[i]=0;
+                next=true;
+            }else{
+                next=false;
+                break;
+            }
+        }
+        if(next){
+            digits.insert(digits.begin(),1);
+        }
+        return digits;
+    }
+};
+```
