--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -245,7 +245,7 @@ public:
         }
 };
 ```
-### 加一
+### 66.加一
 https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x2cv1c/
 
 - 数组遍历+1；对于临界情况进行额外考虑，即头部需要插入新元素
@@ -280,6 +280,47 @@ public:
             digits.insert(digits.begin(),1);
         }
         return digits;
+    }
+};
+```
+
+### 283.移动零
+将数组中所有的0移动至数组末尾，并保持0的相对位置，不能进行数组copy
+
+- 数组遍历交换(有冒泡排序内味儿了)： 时间复杂度 O(n)
+```
+class Solution {
+public:
+    void moveZeroes(vector<int>& nums) {
+        for(int i=0;i<nums.size()-1;i++){
+            for(int j=i;j<nums.size();j++){
+                if(nums[i]==0 && nums[j]!=0){
+                    nums[i]=nums[j];
+                    nums[j]=0;
+                    break;
+                }
+            }
+        }
+    }
+};
+```
+
+- 双指针交换，跟上面的思想本质是一样 O(n)
+```
+class Solution {
+public:
+    void moveZeroes(vector<int>& nums) {
+       int left=0,right=0;
+       int len=nums.size();
+       while(right<len){
+           if(nums[right]){
+               int t=nums[right];
+               nums[right]=0;
+               nums[left]=t;
+               left++;
+           }
+           right++;
+       }
     }
 };
 ```
