--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -324,3 +324,96 @@ public:
     }
 };
 ```
+
+#### 1. 两数之和
+给定数组和目标，找出数组两元素之和为target的元素索引
+
+- 暴力搜索
+- 哈希表：在数组线性遍历时，记录每个值的位置，以便于快速查找差值target-x是否存在。 
+    时间复杂度：O(n)
+
+```
+class Solution {
+public:
+    vector<int> twoSum(vector<int>& nums, int target) {
+        unordered_map<int,int> keys;
+        for(int i=0; i<nums.size();i++){
+            auto iter=keys.find(target-nums[i]);
+            if(iter!=keys.end()){
+                return {iter->second,i};
+            }
+            keys[nums[i]]=i;
+
+        }
+       return {};
+
+    }
+};
+```
+
+#### 36. 有效的数独
+一个简单的解决方案是遍历该 9 x 9 数独 三 次，以确保：
+
+行中没有重复的数字。
+列中没有重复的数字。
+3 x 3 子数独内没有重复的数字。
+实际上，所有这一切都可以在一次迭代中完成。
+
+- 通过哈希表一次记录行、列、宫三种情况的数据分布
+
+```
+class Solution {
+public:
+    bool isValidSudoku(vector<vector<char>>& board) {
+        unordered_map<int,unordered_map<char,int>> row_info;
+        unordered_map<int,unordered_map<char,int>> col_info;
+        unordered_map<int,unordered_map<char,int>> box_info;
+        for(int i=0;i<9;i++){
+            for(int j=0;j<9;j++){
+                if(board[i][j]=='.')
+                    continue;
+                int box=int(i/3)*3+int(j/3);
+                row_info[i][board[i][j]]++;
+                col_info[j][board[i][j]]++;
+                box_info[box][board[i][j]]++;
+                
+
+                if(box_info[box][board[i][j]]>1 ||row_info[i][board[i][j]]>1 || col_info[j][board[i][j]]>1)
+                {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+};
+```
+
+#### 48.旋转图像
+- 转置矩阵，然后再进行同行翻转即可得到旋转结果 时间复杂度O(n^2)
+- 
+```
+class Solution {
+public:
+    void rotate(vector<vector<int>>& matrix) {
+        int n=matrix.size();
+        for(int i=0;i<n;i++)
+        {
+            for(int j=0;j<i;j++){
+                int tmp=matrix[i][j];
+                matrix[i][j]=matrix[j][i];
+                matrix[j][i]=tmp;
+            }
+        }
+        for(int i=0;i<n;i++)
+        {
+            for(int j=0;j<n/2;j++){
+                int tmp=matrix[i][j];
+                matrix[i][j]=matrix[i][n-j-1];
+                matrix[i][n-j-1]=tmp;
+            }
+        }
+        
+    }
+};
+```
