--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -20,3 +20,53 @@ public:
     }
 };
 ```
+
+
+### 7. 整数反转
+
+- 将有符号的整数(int32)进行反转
+- 主要考虑反转过程的溢出情况：当数是正数，逐步计算反转值使用 res*10+pop; 当上一步得到的res以及接近最大临界时需要提取return: res>INT_MAX/10 （res==INT_MAX/10&&res>7） 7为最大正整数的个位数
+- 时间复杂度O(log10(x)) 要处理log10(x)个数字
+
+```class Solution {
+public:
+    int reverse(int x) {
+       int res=0;
+        while(x){
+            int pop=x%10;
+            if(res>INT_MAX/10||(res==INT_MAX/10 && pop>7 )) return 0;
+            if(res<INT_MIN/10||(res==INT_MIN/10 && pop<-8 )) return 0;
+            x=int(x/10);
+            res=res*10+pop;
+        }
+        return res;
+    }
+};
+```
+
+
+###  387. 字符串中的唯一字符
+
+- 返回字符串中第一个出现的非重复字符
+- 使用哈希表记录各字符的情况，最后再遍历一遍字符串得到第一个非重复字符
+
+```
+class Solution {
+public:
+    int firstUniqChar(string s) {
+        unordered_map<char,int> keys;
+        for(int i=0;i<s.length();i++)
+        {
+            keys[s[i]]++;
+        }
+        int pos=0;
+          for(int i=0;i<s.length();i++)
+        {
+            if(keys[s[i]]==1)
+             return i;
+        }
+        return -1;
+
+    }
+};
+```
