--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -70,3 +70,81 @@ public:
     }
 };
 ```
+
+### 字符的有效异位符
+
+- 判断两个字符串是否为字符异位符  即字符分布相同，位置不同；
+- 对字符串进行排序，然后比较: 时间复杂度排序:O(nlogn)
+- 哈希表记录字符串内的数字分布情况，判断两个字符串是否相同： 时间复杂度O(n)
+
+
+```
+class Solution {
+public:
+    bool isAnagram(string s, string t) {
+        sort(s.begin(),s.end());
+        sort(t.begin(),t.end());
+        if(s==t)
+        return true;
+        return false;
+
+    }
+};
+```
+
+```class Solution {
+public:
+    bool isAnagram(string s, string t) {
+        if(s.length()!=t.length())
+        return false;
+        unordered_map<char,int> keys;
+        for(int i=0;i<s.length();i++){
+            keys[s[i]]++;
+        }
+        for(int i=0;i<t.length();i++){
+            if(keys.count(t[i])==0)
+              return false;
+            keys[t[i]]--;
+            if(keys[t[i]]==0)
+             keys.erase(t[i]);
+        }
+        return true;
+        
+
+    }
+};
+```
+
+###  125. 回文串验证
+
+- 要剔除非字母/数字的字符
+- 可以利用双指针法进行剔除和回文的同时验证；(注意大小字母转换)  时间复杂度O(|s|) 空间复杂度O(1)
+- 或者将剔除的字符放在新的字符串中，利用字符串反转等操作进行回文判断 O(|s|) 空间复杂度O(|s|)
+
+```
+class Solution {
+public:
+    bool isPalindrome(string s) {
+        int start=0;
+        int end=s.length()-1;
+        //cout<<end<<endl;
+        while(start<end){
+            if((s[start]<'a'||s[start]>'z')&&(s[start]<'0'||s[start]>'9')&&(s[start]<'A'||s[start]>'Z'))
+            {
+                start++;continue;
+            }
+            
+            if((s[end]<'a'||s[end]>'z')&&(s[end]<'0'||s[end]>'9')&&(s[end]<'A'||s[end]>'Z'))
+            {
+                end--;continue;
+            }
+            if(tolower(s[start])!=tolower(s[end]))
+            return false;
+            start++;
+            end--;
+        }
+        return true;
+
+    }
+};
+```
