--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -148,3 +148,157 @@ public:
     }
 };
 ```
+
+#### 8.字符串转换整数 (atoi) Mid
+
+- 字符串转换需要考虑比较多的边界情况，可以考虑使用有限状态自动机来解题
+- 注：当题目中的情况比较多，即需要考虑特别多/细小的边界情况，需要联想到使用自动机来简化解题过程。
+- 对于越界情况，可以简化使用Long long形态来简化
+
+```
+class Solution {
+public:
+    int myAtoi(string s) {
+        int res=0;
+        bool begin=false;
+        int sign=1;
+        for(int i=0;i<s.size();i++){
+           
+            if(s[i]==' ') 
+            {
+                if(begin)
+                  return res;
+                continue;
+            }
+
+            // 判断第一个valid
+            if((s[i]!='-')&&(s[i]!='+')&&(s[i]<'0')||(s[i]>'9')){
+                return res;
+            }
+            if(s[i]=='-'){
+                sign=-1;
+                if(begin) return res;
+                begin=true;
+            }
+            else if(s[i]=='+'){
+                if(begin) return res;
+                begin=true;
+                continue;
+            }
+            else{
+                begin=true;
+                //*sign;
+                if((res>INT_MAX/10)||(res==INT_MAX/10&&s[i]>'7')){
+                    
+                    return INT_MAX;
+                }
+                if(res<INT_MIN/10||(res==INT_MIN/10&&(s[i]-'0')>8)){
+                    return INT_MIN;
+                }
+                int tmp=res*10;
+                cout<<tmp<<endl;
+                res=tmp+(s[i]-'0')*sign;
+                cout<<res<<endl;
+            }
+        }
+        return res;
+
+    }
+};
+```
+
+#### 8. 实现strStr() 子串匹配查找
+
+- KMP查找算法，定义最大相同前后缀长度，计算子串各位置的最大前缀长度，当出现不匹配时根据最大前缀长度进行回退 时间复杂度(O(N))
+- 常见面试题，需要深入了解并记住该原理，可以动态规划求解：前缀是指不包含最后一个字符的所有以第一个字符开头的连续子串；后缀是指不包含第一个字符的所有以最后一个字符结尾的连续子串
+- 字符串匹配算法：还有Sunday 匹配机制相对比较简单：
+    - 
+
+```
+class Solution {
+public:
+    void get_next(vector<int> &next,string &s){
+        int j=-1;
+        next[0]=j;
+        for(int i=1;i<s.length();i++){
+            //回溯
+            while(j>=0&&s[j+1]!=s[i])
+            {
+                j=next[j];
+            }
+            if(s[j+1]==s[i]){
+                j++;
+            }
+            next[i]=j;
+        }
+    }
+    int strStr(string haystack, string needle) {
+        if(needle.length()==0) return 0;
+        vector<int> next(needle.length());
+        get_next(next,needle);
+        int j=-1;
+        for(int i=0; i<haystack.length();i++){
+            int ns=0;
+            while(j>=0&&haystack[i]!=needle[j+1]){
+                j=next[j];
+            }
+            if(haystack[i]==needle[j+1]){
+                j++;
+            }
+            
+            if(j==needle.size()-1)
+            return (i-needle.size()+1);
+            
+        }
+    return -1;
+    }
+};
+```
+
+- 更简单的匹配方法：记录待匹配子串的位移表，即每一个在子串 中出现的字符，在子串中出现的最右位置到尾部的距离+1，即记录在匹配失败后的最小移动长度
+- 在匹配失败后根据位移表，调整目标串的遍历指针位置，如果下个字符出现在子串中，根据位移表进行指针移动；否则直接将位置移动len+1个位置。
+- 时间复杂度O(n)，最差情况：O(mn)
+```
+class Solution {
+public:
+    
+    int strStr(string haystack, string needle) {
+        if(needle.length()==0) return 0;
+        unordered_map<int,int> shift;
+        int len=needle.length();
+        for(int i=len-1;i>=0;i--){
+            if(shift.count(needle[i]))
+            continue;
+            shift[needle[i]]=len-i;
+        }
+        int ns=0;
+        int start=0;
+        int i=start;
+        while( i<haystack.length()){
+            if(haystack[i]!=needle[ns]){
+                if(start+len<haystack.length()){
+                    if(shift.count(haystack[start+len])){
+                        start=start+shift[haystack[start+len]];
+                    }else{
+                        start=start+len+1;
+                    }
+                    i=start;
+                }
+                else{
+                    return -1;
+                }
+                ns=0;
+            }
+            else{
+                ns++;
+                i++;
+                if(ns==needle.length()){
+                    return start;
+                }
+            }
+        }
+
+    return -1;
+    }
+};
+```
