--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -302,3 +302,52 @@ public:
     }
 };
 ```
+
+#### 38.外观数列
+- 数组遍历，分段计算
+- 可以使用双指针完成，头尾指针共同确定一段数字相同的片段
+
+```class Solution {
+public:
+    string countAndSay(int n) {
+        if(n==1) return "1";
+        
+        string s=countAndSay(n-1);
+        int counts=1;
+        string res;
+        char tmp;
+        
+        for(int i=0;i<s.length();i++){
+            if(i==0){
+                counts=1;
+                tmp=s[i];
+                if(i==s.length()-1){
+                res.append(to_string(counts));
+                counts=1;
+                res.append(1,tmp);
+                tmp=s[i]; 
+                }
+                continue;
+            }
+            if(s[i]==s[i-1]){
+                counts++;
+            }else{
+                res.append(to_string(counts));
+                counts=1;
+                res.append(1,tmp);
+                tmp=s[i];
+            }
+            if(i==s.length()-1){
+                res.append(to_string(counts));
+                counts=1;
+                res.append(1,tmp);
+                tmp=s[i]; 
+            }
+            //cout<<res<<endl;
+        }
+
+        return res;
+
+    }
+};
+```
