--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -351,3 +351,57 @@ public:
     }
 };
 ```
+
+
+#### 14. 最长公共前缀
+
+- 计算多个字符串的最长公共前缀
+- 基本方法包括：横向扫描方法和纵向扫描方法
+    - 横向扫描：对于m个字符串，依次遍历字符串数组中的每个字符串，对于每个遍历到的字符串，更新最长公共前缀，当遍历完所有的字符串以后，即可得到字符串数组中的最长公共前缀。
+    $LCP(S_1,S_2...,S_n)=LCP(LCP(...LCP(LCP(S_1,S_2),S_3)..))$   
+    时间复杂度：O(mn) 空间复杂度：O(1)
+
+    - 纵向扫描: 最容易想到，逐一遍历各串同一位置上的字符，对比是否相同，如不同或者达到字符尾，扫描结束。  时间复杂度：O(mn) 空间复杂度：O(1)
+
+- 二分查找：长公共前缀的长度不会超过字符串数组中的最短字符串的长度。用 $\textit{minLength}minLength$ 表示字符串数组中的最短字符串的长度，则可以在 $[0,\textit{minLength}][0,minLength]$ 的范围内通过二分查找得到最长公共前缀的长度。
+每次取查找范围的中间值 $\textit{mid}mid$，判断每个字符串的长度为$ \textit{mid}mid$ 的前缀是否相同，如果相同则最长公共前缀的长度一定大于或等于 $\textit{mid}mid$，如果不相同则最长公共前缀的长度一定小于 $\textit{mid}mid$，通过上述方式将查找范围缩小一半，直到得到最长公共前缀的长度。  时间复杂度为O(mnlogm) m为最小字符串长度。
+
+
+```
+class Solution {
+public:
+    string longestCommonPrefix(vector<string>& strs) {
+        //int s_id=0;
+        int c_id=0;
+        char tmp;
+        string res="";
+        int s_len=strs.size();
+        bool flag=false;
+        if(s_len==0) return res;
+        while(true){
+            for(int i=0;i<s_len;i++){
+                if(c_id==strs[i].length()){
+                    flag=true;
+                    break;
+                }else{
+                    if(i==0){
+                        tmp=strs[i][c_id];
+                    }else{
+                        if(strs[i][c_id]!=tmp){
+                            flag=true;
+                            break;
+                        }
+                    }
+                }
+
+            }
+            if(flag) return res;
+            res.append(1,tmp);
+            c_id++;
+        }
+        return res;
+
+
+    }
+};
+```
