--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -1,4 +1,20 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [344.反转字符串](#344反转字符串)
+- [7. 整数反转](#7-整数反转)
+- [387. 字符串中的唯一字符](#387-字符串中的唯一字符)
+- [字符的有效异位符](#字符的有效异位符)
+- [125. 回文串验证](#125-回文串验证)
+- [8.字符串转换整数 (atoi) Mid](#8字符串转换整数-atoi-mid)
+- [8. 实现strStr() 子串匹配查找](#8-实现strstr-子串匹配查找)
+- [38.外观数列](#38外观数列)
+- [14. 最长公共前缀](#14-最长公共前缀)
+
+<!-- /code_chunk_output -->
+
 ### 344.反转字符串
 
 - 双指针法：头尾指针进行掉换，时间复杂度为O(N)
@@ -149,7 +165,7 @@ public:
 };
 ```
 
-#### 8.字符串转换整数 (atoi) Mid
+### 8.字符串转换整数 (atoi) Mid
 
 - 字符串转换需要考虑比较多的边界情况，可以考虑使用有限状态自动机来解题
 - 注：当题目中的情况比较多，即需要考虑特别多/细小的边界情况，需要联想到使用自动机来简化解题过程。
@@ -207,7 +223,7 @@ public:
 };
 ```
 
-#### 8. 实现strStr() 子串匹配查找
+### 8. 实现strStr() 子串匹配查找
 
 - KMP查找算法，定义最大相同前后缀长度，计算子串各位置的最大前缀长度，当出现不匹配时根据最大前缀长度进行回退 时间复杂度(O(N))
 - 常见面试题，需要深入了解并记住该原理，可以动态规划求解：前缀是指不包含最后一个字符的所有以第一个字符开头的连续子串；后缀是指不包含第一个字符的所有以最后一个字符结尾的连续子串
@@ -303,7 +319,7 @@ public:
 };
 ```
 
-#### 38.外观数列
+### 38.外观数列
 - 数组遍历，分段计算
 - 可以使用双指针完成，头尾指针共同确定一段数字相同的片段
 
@@ -353,7 +369,7 @@ public:
 ```
 
 
-#### 14. 最长公共前缀
+### 14. 最长公共前缀
 
 - 计算多个字符串的最长公共前缀
 - 基本方法包括：横向扫描方法和纵向扫描方法
