--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -129,3 +129,135 @@ public:
     }
 };
 ```
+
+### 206. 反转链表-easy
+
+- 一次遍历即可，每次记录前一个节点，并修改当前节点的指针为前一个节点，完成反转
+- 返回时返回遍历结果，即最后一个节点的指针即可
+- 时间复杂度O(n),空间复杂度O(1)
+
+```
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode(int x) : val(x), next(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode* reverseList(ListNode* head) {
+        //ListNode* dummpy_node=new ListNode(0,head);
+        ListNode* start=head;
+        ListNode* pred=NULL;
+        ListNode* next=NULL;
+        
+        while(start){
+            next=start->next;
+            if(pred){
+                start->next=pred;
+            }else{
+                start->next=NULL;
+            }
+            pred=start;
+            start=next;
+        }
+        //dummpy_node->next=NULL;
+        return pred;
+    }
+};
+```
+
+**递归版本**： current_str=reverse(n-1).next.next
+- https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247484467&idx=1&sn=beb3ae89993b812eeaa6bbdeda63c494&chksm=9bd7fa3baca0732dc3f9ae9202ecaf5c925b4048514eeca6ac81bc340930a82fc62bb67681fa&scene=21#wechat_redirect
+- 递归反转链表：高频面试题
+- 1. 首先给定递归函数的定义:
+    reverse(head)表示给定头指针为head的链表，以head为起点，返回反转后的列表的头指针p
+- 2. 假定得到reverse结果后，考虑后续的操作：
+    将p=reverse(head.next),将未反转的节点连接到反转后的链表：
+        head.next.next=head;
+        head.next=null; 
+    完成整体反转
+- 3. 总体看：将问题简化为两步操作，将链表分为head和head后的链表，假定head后的链表已递归反转，然后再将head进行连接。
+
+```
+class Solution {
+public:
+    ListNode* reverseList(ListNode* head) {
+        //ListNode* dummpy_node=new ListNode(0,head);
+        if(head==NULL || head->next==NULL){
+            return head;
+        }
+        ListNode* p=reverseList(head->next);
+        head->next->next=head;
+        head->next=NULL;
+        return p;
+
+    }
+};
+```
+**延申题目**： 局部反转： 反转链表前N个元素
+- **reverseN(head, 3) 给定头指针，反转前3个元素，返回头指针**；
+- 仍然将问题简化为两步： 给定head，对于head->next后的N-1个元素，通过reverseN(head->next,N-1); 
+- 完成反转后，将head和head->next进行反转，并将head的next指向原来链表中的第N+1个元素
+- 这个N+1元素需要在递归中提前记录，并将其作为递归终止的条件。
+```
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode(int x) : val(x), next(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode * successor=NULL;
+    ListNode* reverseList(ListNode* head,int n) {
+        //ListNode* dummpy_node=new ListNode(0,head);
+        if(n==1){
+            successor=head->next;
+            return head;
+        }
+        ListNode* p=reverseList(head->next,n-1);
+        head->next->next=head;
+        head->next=successor;
+        return p;
+
+    }
+};
+```
+
+- **反转链表中第[m,n]个元素**
+- 可以把问题进行简化，当指针遍历到需要开始翻转的位置时调用前面的reverseN即可：
+- head->next=reverse(head->next,m-1,n-1): 直观看就是在链表遍历，m-1和n-1即保证反转的相对位置不变；
+- 对于reverse中m==1 表明已经到达待翻转位置：
+
+```
+class Solution {
+public:
+    ListNode * successor=NULL;
+    ListNode* reverseN(ListNode* head,int n) {
+        //ListNode* dummpy_node=new ListNode(0,head);
+        if(n==1){
+            successor=head->next;
+            return head;
+        }
+        ListNode* p=reverseList(head->next,n-1);
+        head->next->next=head;
+        head->next=successor;
+        return p;
+    }
+    ListNode* reversePart(ListNode* head,int m,int n ) {
+        //ListNode* dummpy_node=new ListNode(0,head);
+        if(m==1){
+            return reverseN(head,n);
+            //return head;
+        }
+        head->next=reverseList(head->next,m-1,n-1);
+        
+        return p;
+    }
+};
+```
