--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -261,3 +261,97 @@ public:
     }
 };
 ```
+
+### 21. 合并两个有序链表
+
+
+- 先设置一个空头指针，记录头信息；并设置游走遍历指针pred来在两个链表之间遍历；
+- 在最后要将未遍历至尾部的链表添加到pred中，避免数据错误
+
+```
+
+class Solution {
+public:
+    ListNode* mergeTwoLists(ListNode* l1, ListNode* l2) {
+        ListNode* prehead=new ListNode(0);
+        ListNode* pred=prehead;
+        while(l1&&l2){
+          if(l1->val<=l2->val)
+          {
+              pred->next=l1;
+              l1=l1->next;
+          }else{
+              pred->next=l2;
+              l2=l2->next;
+          }
+          pred=pred->next;
+        }
+        pred->next=l1==NULL?l2:l1;
+        return prehead->next;
+        
+    }
+};
+```
+
+### 234. 回文链表判断
+
+- 方法一： **快慢指针法； 快指针每次走两步，慢指针每次走一步**；最后慢指针位置对应链表中间位置，根据慢指针的位置，对后半部分进行链表反转，然后分别从头部和链表中部开始逐一元素对比，确认是否是回文。
+
+- 
+
+
+```
+ 
+class Solution {
+public:
+ListNode* reverseList(ListNode* head) {
+        //ListNode* dummpy_node=new ListNode(0,head);
+        ListNode* start=head;
+        ListNode* pred=NULL;
+        ListNode* next=NULL;
+        
+        while(start){
+            next=start->next;
+            if(pred){
+                start->next=pred;
+            }else{
+                start->next=NULL;
+            }
+            pred=start;
+            start=next;
+        }
+        
+        return pred;
+    }
+    bool isPalindrome(ListNode* head) {
+        if(head==NULL) return true;
+        ListNode* fast=head;
+        ListNode* slow=head;
+        while(fast->next)
+        {
+            if(fast->next->next==NULL) break;
+        
+            fast=fast->next->next;
+            slow=slow->next;
+            cout<<slow->val<<endl;
+        }
+        ListNode* halfend=slow;
+        slow->next=reverseList(slow->next);
+        //slow=halfend->next;
+        fast=head;
+        slow=slow->next;
+        
+        while(slow){
+             
+            if(fast->val==slow->val){
+                fast=fast->next;
+                slow=slow->next;
+            }
+            else
+            return false;
+        }
+        return true;
+
+    }
+};
+```
