--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -292,6 +292,47 @@ public:
     }
 };
 ```
+- **当然还有递归方法啦** 递归公式：
+     merge(L1->next,L2) if L1[0]<L2[0];
+     merge(L1,L2->next) otherwise;
+
+     递归终止条件： 到链表尾部
+     
+
+
+```/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode() : val(0), next(nullptr) {}
+ *     ListNode(int x) : val(x), next(nullptr) {}
+ *     ListNode(int x, ListNode *next) : val(x), next(next) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode* mergeTwoLists(ListNode* l1, ListNode* l2) {
+        if(l2==NULL)
+        {
+            return l1;
+        }
+        if(l1==NULL){
+            return l2;
+        }
+        if(l1->val>l2->val){
+           l2->next= mergeTwoLists(l1,l2->next);
+           return l2;
+        }
+        else{
+            l1->next=mergeTwoLists(l1->next,l2);
+            return l1;
+        }
+        
+        
+    }
+};
+```
 
 ### 234. 回文链表判断
 
@@ -352,6 +393,64 @@ ListNode* reverseList(ListNode* head) {
         }
         return true;
 
+    }
+};
+```
+
+### 141. 环形链表操作
+
+- 判断链表是否有环
+- 1. **记录链表指针，使用哈希表存储，检查是否出现重复**； 时间复杂度O(n)； 空间复杂度 O(n)
+
+```/
+class Solution {
+public:
+    bool hasCycle(ListNode *head) {
+        unordered_set<ListNode*> seens; // 存储链表节点指针
+        while(head){
+            if(seens.count(head)){
+                return true;
+            }
+            seens.insert(head);
+            head=head->next;
+        }
+        return false;
+    }
+};
+```
+- 2. 还可以使用链表中经典的**快慢指针**,判断快指针是否出现从后追上慢指针的情况，即出现环链；
+    时间复杂度为O(n)，空间复杂度为O(1)
+
+```
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode(int x) : val(x), next(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    bool hasCycle(ListNode *head) {
+        if(head==NULL) return false;
+       ListNode * fast=head;
+       ListNode *slow=head;
+       while(fast->next){
+           if(fast->next->next)
+           {
+               fast=fast->next->next;
+               slow=slow->next;
+               if(slow==fast){
+                   return true;
+               }
+           }
+           else
+           {
+               return false;
+           }
+       }
+        return false;
     }
 };
 ```
