--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -1,10 +1,24 @@
 
 
+
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [237. 删除链表指定节点](#237-删除链表指定节点)
+- [19. 删除链表的倒数第N个节点](#19-删除链表的倒数第n个节点)
+- [206. 反转链表-easy](#206-反转链表-easy)
+- [21. 合并两个有序链表](#21-合并两个有序链表)
+- [234. 回文链表判断](#234-回文链表判断)
+- [141. 环形链表操作](#141-环形链表操作)
+- [小结](#小结)
+
+<!-- /code_chunk_output -->
+
+
 不要忘记 "双指针解法" ，它不仅适用于数组问题，而且还适用于链表问题。
 
 另一种大大简化链接列表问题的方法是 "Dummy node" 节点技巧 ，所谓 Dummy Node 其实就是带头节点的指针
-
-
 
 ### 237. 删除链表指定节点
 
@@ -454,3 +468,8 @@ public:
     }
 };
 ```
+
+### 小结
+- 掌握链表的构成方式(单向/双向)
+- 掌握基本的操作方式：**删除节点、遍历链表、反转链表以及局部反转链表的操作**
+- 掌握常用技巧： **Dummy_node、双指针遍历、快慢指针以及哈希/堆栈存储指针**
