--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -74,4 +74,178 @@ public:
 
 - 涉及基本的二叉树遍历以及二叉搜索树性质
 
-- 递归解法
+- 递归解法: 利用BST所有左子树节点小于根节点，所有右子树节点大于根节点，这一性质构建递归公式
+
+```/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    bool helper(TreeNode* root, long long lower, long long upper){
+        if(root==NULL) return true;
+
+        if(root->val<=lower||root->val>=upper){
+            return false;
+        }
+        return helper(root->left,lower,root->val)&&helper(root->right,root->val,upper);
+
+    }
+    bool isValidBST(TreeNode* root) {
+        return helper(root,LONG_MIN,LONG_MAX);
+        }
+};
+```
+
+- 遍历解法：利用**中序遍历**得到BST对应的数组，检查是否是单增的数组即可
+![avatar](./inorder-0.png)
+```/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    vector<int> nodes;
+    // 中序遍历
+    void inOrderParse(TreeNode* root){
+        if(root==NULL) return;
+        inOrderParse(root->left);
+        nodes.push_back(root->val);
+        inOrderParse(root->right);
+    }
+    bool isValidBST(TreeNode* root) {
+        inOrderParse(root);
+        for(int i=0;i<nodes.size()-1;i++){
+            if(nodes[i+1]<=nodes[i]){
+                return false;
+            }
+        }
+        return true;
+        }
+      
+};
+```
+
+### 101. 对称二叉树
+
+- 利用迭代的方式实现：**记录双指针**，指针方向相反同时压入队列，使得队列中连续两个指针值相同；否则为非对称树
+![avatar](./sysm-0.png)
+```
+class Solution {
+public:
+    bool isSymmetric(TreeNode* root) {
+        queue<TreeNode*> Q;
+        Q.push(root);
+        Q.push(root);
+        while(Q.size()>0){
+            TreeNode* p= Q.front(); Q.pop();
+            TreeNode* q= Q.front(); Q.pop();
+            if(!p&&!q){
+                continue;
+            }
+            else if(!p || !q){
+                return false;
+            }
+            if(p->val!=q->val){
+                return false;
+            }
+            Q.push(p->left);
+            Q.push(q->right);
+            Q.push(p->right);
+            Q.push(q->left);
+        }
+        return true;
+        
+    }
+};
+```
+
+- 递归方式：跟上面一样利用**双指针**，向着对称的相反方向进行遍历：
+```class Solution {
+public:
+    bool check(TreeNode*p, TreeNode*q){
+        if(!p&&!q) return true; // 
+        if(!p||!q) return false; // 非对称情况
+        return (p->val==q->val)&&(check(p->left,q->right))&&(check(p->right,q->left)); 
+    }
+    bool isSymmetric(TreeNode* root) {
+       return  check(root,root);
+    }
+};
+```
+
+### 102. 二叉树的层序遍历
+
+- 最简单的做法：利用BFS做层序遍历，利用队列存储节点指针，每层运算结束时记录当前层的数组
+
+```
+class Solution {
+public:
+    vector<vector<int>> levelOrder(TreeNode* root) {
+        vector<vector<int>> res;
+        if(root==NULL) return res;
+        queue<TreeNode*>Q;
+        Q.push(root);
+       
+        while(Q.size()>0){
+            
+            vector<int> tmp;
+            int sz=Q.size();
+            while(sz){
+                TreeNode * node=Q.front();
+                Q.pop();
+                if(node->left){
+                    Q.push(node->left);
+                }
+                if(node->right){
+                    Q.push(node->right);
+                }
+                tmp.push_back(node->val);
+                sz--;
+            }
+            res.push_back(tmp);
+            
+        }
+        return res;
+    }
+};
+
+```
+
+- 递归方式： 利用DFS的思想进行遍历，并根据遍历的深度存储数组：利用先序遍历的方式完成任务，只是额外添加了遍历层数，使得能够记录数字对应的层数；
+![avatar](102.png)
+![avatar](102-02.png)
+```
+class Solution {
+public:
+    vector<vector<int>> res;
+    void _level(TreeNode* root,int level){
+        if(root==NULL) return;
+        if(level>=res.size()){
+            res.push_back(vector<int>()); //提前添加空数组
+        }
+        res[level].push_back(root->val);
+        _level(root->left,level+1);
+        _level(root->right,level+1);
+    }
+    vector<vector<int>> levelOrder(TreeNode* root) {
+        _level(root,0);
+        
+        return res;
+    }
+};
+```
