--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -1,4 +1,6 @@
--
+
+
+
 
 树比链表稍微复杂，因为链表是线性数据结构，而树不是。 
 树的问题可以由 广度优先搜索BFS 或 深度优先搜索DFS 解决。 
@@ -8,8 +10,19 @@
 验证二叉搜索树，
 二叉树的层次遍历 和 将有序数组转换为二叉搜索树
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
-### 二叉树的最大深度
+<!-- code_chunk_output -->
+
+- [二叉树的最大深度](#二叉树的最大深度)
+- [98. 验证二叉搜索树](#98-验证二叉搜索树)
+- [101. 对称二叉树](#101-对称二叉树)
+- [102. 二叉树的层序遍历](#102-二叉树的层序遍历)
+
+<!-- /code_chunk_output -->
+
+
+### 104. 二叉树的最大深度
 
 - 二叉树遍历问题： BFS/DFS
 - 基于DFS思想，计算左右子树的深度，取两子树的最大深度; 时间复杂度O(n) 空间复杂度O(depth)
