--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -14,7 +14,7 @@
 
 <!-- code_chunk_output -->
 
-- [二叉树的最大深度](#二叉树的最大深度)
+- [104. 二叉树的最大深度](#104-二叉树的最大深度)
 - [98. 验证二叉搜索树](#98-验证二叉搜索树)
 - [101. 对称二叉树](#101-对称二叉树)
 - [102. 二叉树的层序遍历](#102-二叉树的层序遍历)
