update the 108 capture

--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -18,6 +18,7 @@
 - [98. 验证二叉搜索树](#98-验证二叉搜索树)
 - [101. 对称二叉树](#101-对称二叉树)
 - [102. 二叉树的层序遍历](#102-二叉树的层序遍历)
+- [108. 有序数组转搜索二叉树](#108-有序数组转搜索二叉树)
 
 <!-- /code_chunk_output -->
 
@@ -262,3 +263,31 @@ public:
     }
 };
 ```
+
+### 108. 有序数组转搜索二叉树
+
+- 要求左右子树高度平衡，即需要选择数组中间位置的数字作为根节点
+    当数组长度为奇数或者偶数时，存在差异：对于偶数时需要考虑选择偏左位置还是偏右位置的作为根节点，两者没有效果差异
+- 通过递归形式，进行转换
+
+```class Solution {
+public:
+    TreeNode * helper(vector<int>& nums, int left,int right){
+        if(left>right){
+            return NULL; 
+        }
+        int mid=int((left+right+1)/2);
+
+        TreeNode * root=new TreeNode(nums[mid]);
+        root->left=helper(nums,left,mid-1);
+        root->right=helper(nums,mid+1,right);
+        return root;
+    }
+    TreeNode* sortedArrayToBST(vector<int>& nums) {
+        return helper(nums,0,nums.size()-1);
+
+    }
+};
+
+```
+![avatar](./108-01.png)
