--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -10,6 +10,8 @@
 验证二叉搜索树，
 二叉树的层次遍历 和 将有序数组转换为二叉搜索树
 
+- 主要要掌握：二叉树的遍历方式BFS、DFS，以及对应的先序(根-左-右)/中序(左 根 右)/后序(左 右 根)/层级遍历
+
 <!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
 <!-- code_chunk_output -->
