最大子序和问题

--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -105,4 +105,26 @@ public:
 };
 ```
 
+- 贪心算法: 从左到右遍历，计算和值，保留最大值；当和值小于0时，当前和值归0；
+- 后续编程中，首先考虑边界情况(输入为空的情况)
+![avatar](./53-greedy.png)
+```class Solution {
+public:
+    int maxSubArray(vector<int>& nums) {
+        //vector<int> res(nums.size());
+        if(nums.size()==0) return INT_MIN;  
+        int sum=0;
+        int maxans=INT_MIN;
+        for(int i =0; i<nums.size();i++){
+            sum+=nums[i]; 
+            maxans=max(sum,maxans);
+            if(sum<0){
+                sum=0;
+            }
+        }
+        return maxans;
+    }
+};
+```
+
 -  分治解法
