--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -105,8 +105,8 @@ public:
 };
 ```
 
-- 贪心算法: 从左到右遍历，计算和值，保留最大值；当和值小于0时，当前和值归0；
-- 后续编程中，首先考虑边界情况(输入为空的情况)
+- 贪心算法: 从左到右遍历，计算和值，保留最大值；当和值小于0时，当前和值归0； 本质上仍然是DP算法
+- **后续编程中，首先考虑边界情况(输入为空的情况)**
 ![avatar](./53-greedy.png)
 ```class Solution {
 public:
@@ -128,3 +128,58 @@ public:
 ```
 
 -  分治解法
+
+
+
+### 198. 打家劫舍
+- 计算非间隔取数的最大值
+- DP算法求解： dp[x]表示以第x个值结尾打劫取得的最大值：
+    状态转移公式如下 dp[x]=max(dp[x-1],dp[x-2]+a[x]),dp[0]=a[0];dp[1]=max(a[0],a[1])
+- 时间复杂度O(N) 空间复杂度O(n)
+
+```class Solution {
+public:
+    int rob(vector<int>& nums) {
+        if(nums.size()==0){return 0;}
+        
+        vector<int> dp;
+        dp.push_back(nums[0]);
+        for(int i=1;i<nums.size();i++){
+            if(i<=1){
+                dp.push_back(max(nums[i],dp[i-1]));
+            }
+            else{
+                dp.push_back(max(dp[i-1],dp[i-2]+nums[i]));
+            }
+        }
+        return dp[nums.size()-1];
+
+    }
+};
+```
+
+- **通过滚动数组压缩空间：仅用两个变量来记录即可**，在状态更新过程中进行变量移动更新，将空间复杂度压缩至O(1)
+
+```class Solution {
+public:
+    int rob(vector<int>& nums) {
+        if(nums.size()==0){return 0;}
+        
+        int odd=nums[0];
+        int even=odd;
+
+        for(int i=1;i<nums.size();i++){
+            if(i<=1){
+                even=max(odd,nums[i]);
+            }
+            else{
+                int tmp=(max(even,odd+nums[i]));
+                odd=even;
+                even=tmp;
+            }
+        }
+        return even;
+
+    }
+};
+```
