--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -127,7 +127,47 @@ public:
 };
 ```
 
--  分治解法
+-  **分治解法**， 定义线段树，对于一个区间[l,r],定义中点$m=(l+r)/2$，分治计算[l,m]和[m+1,r]两段
+    - 利用线段树来计算，对于线段[l,r]
+    - lSum 表示 [l, r][l,r] 内以 l **为左端点的最大子段和**
+    rSum 表示 [l, r][l,r] 内以 r **为右端点的最大子段和**
+    mSum 表示 [l, r][l,r] 内的最大子段和
+    iSum 表示 [l, r][l,r] 的**区间和**
+    - 通过递归对段内的量进行计算：
+        可以考虑 [l, r]的 mSum 对应的区间是否跨越 m——它可能不跨越 m，也就是说 [l, r] 的 mSum 可能是「左子区间」的 mSum 和 「右子区间」的 mSum 中的一个；它也可能跨越 m，可能是「左子区间」的 rSum 和 「右子区间」的 lSum 求和。三者取大。
+    
+    - 时空复杂度分析： 相当于遍历了整棵二叉树，时间复杂度O(n)； 由于递归过程空间复杂度为O(logn)，树的深度为logn
+
+```class Solution {
+public:
+    struct Status {
+        int lSum, rSum, mSum, iSum;
+    };
+
+    Status pushup(Status l, Status r){
+        int iSum=l.iSum+r.iSum;
+        int lSum=max(l.lSum,l.iSum+r.lSum);
+        int rSum=max(r.rSum,r.iSum+l.rSum);
+        int mSum=max(max(l.mSum,r.mSum),l.rSum+r.lSum);
+        return (Status){lSum,rSum,mSum,iSum};
+    }
+
+    Status get(int l,int r,vector<int>& nums){
+        if(l==r){
+            return (Status){nums[l],nums[l],nums[l],nums[l]};
+        }
+        int m=(l+r)/2;
+        Status lSub = get(l,m,nums);
+        Status rSub = get(m+1,r,nums);
+        return pushup(lSub,rSub);
+    }
+    int maxSubArray(vector<int>& nums) {
+        //vector<int> res(nums.size());
+        return get(0,nums.size()-1,nums).mSum;
+        
+    }
+};
+```
 
 
 
