--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -105,3 +105,30 @@ public:
     }
 };
 ```
+
+### 374. 猜数字大小
+- 典型的二分查找应用
+```/** 
+ * Forward declaration of guess API.
+ * @param  num   your guess
+ * @return 	     -1 if num is lower than the guess number
+ *			      1 if num is higher than the guess number
+ *               otherwise return 0
+ * int guess(int num);
+ */
+
+class Solution {
+public:
+    int guessNumber(int n) {
+        int left=1;
+        int right=n;
+        while(left<=right){
+            int mid=left+(right-left)/2;
+            if(guess(mid)==0) return mid;
+            else if(guess(mid)<0) right=mid-1;
+            else if(guess(mid)>0) left=mid+1;
+        }
+        return -1;
+    }
+};
+```
