--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -115,7 +115,7 @@ public:
  *			      1 if num is higher than the guess number
  *               otherwise return 0
  * int guess(int num);
- */
+ */ 
 
 class Solution {
 public:
@@ -129,6 +129,42 @@ public:
             else if(guess(mid)>0) left=mid+1;
         }
         return -1;
+    }
+};
+```
+
+### 33. 搜索旋转排序数组
+- 中等题目
+- 给定的数组经过旋转后，是部分有序的。
+- 查找中的区间定位要发生改变，要考虑部分有序的区间来搜索：
+```class Solution {
+public:
+    int search(vector<int>& nums, int target) {
+        int left = 0;
+        
+        int right =  nums.size()-1;
+        
+        while(left<=right){
+            int mid=left+(right-left)/2;
+            if(nums[mid]==target)
+                return mid;
+            // 左侧有序
+            if(nums[0]<=nums[mid]){
+                if(nums[0]<=target && target<nums[mid])
+                    {right=mid-1;}
+                else
+                    {left=mid+1;}
+            }else {
+                // 右侧有序
+                if(nums[nums.size()-1]>=target && nums[mid]<target)
+                    {left=mid+1;}
+                else    
+                    {right=mid-1;}
+            }
+          
+        }
+        return -1;
+
     }
 };
 ```
