--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -171,3 +171,42 @@ public:
 
 ### 在排序数组中查找元素的第一个和最后一个位置
 - 二分查找寻找边界
+- 分别寻找左右边界，重新定义一个函数来辅助实现
+- 时间复杂度 O(logN) 空间复杂度 O(1)
+```class Solution {
+public:
+    int binarySearch(vector<int>& nums, int target, bool left_flag){
+        int left = 0;
+        int right = nums.size()-1;
+        while(left<=right){
+            int mid = left + (right-left)/2;
+            if (nums[mid]==target){
+                if(left_flag){
+                    right=mid-1;
+                }
+                else{
+                    left=mid+1;
+                }
+            }
+            else if (nums[mid]>target){
+                right=mid-1;
+            }
+            else if (nums[mid]<target){
+                left = mid+1;
+            }
+        }
+        if(left_flag)
+            return left;
+        else
+            return right;
+
+    }
+    vector<int> searchRange(vector<int>& nums, int target) {
+        int left_range=binarySearch(nums,target,true);
+        if(left_range>=nums.size()|| nums[left_range]!=target)
+            return vector<int>{-1, -1};
+        int right_range=binarySearch(nums,target,false);
+        return vector<int>{left_range, right_range};
+    }
+};
+```
