--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -210,3 +210,141 @@ public:
     }
 };
 ```
+
+### 658. Find K Closest Elements 
+- 中等题目
+- 二分查找找边界的变形应用
+- 给定有序数组，找出其中与目标`x`最接近的`K`个元素
+- 思路：
+    - 先用二分查找找到x的左边界：即首个`x>=`的值的index
+    - 然后进行区间搜索，搜索出最优的K个近邻元素，即子区间
+        - 搜索方法： **双指针法**： `low`  `high`
+        - 当`low<0`或者`high`与target的距离更近时，high++
+        - 当`high>=arr.size`或者`low`与target的距离更近时，low--
+        - 以上调整的核心目的是避免溢出，并找到closest的区间
+
+    - 时间复杂度： O(logN+k) 空间复杂度 O(k)
+
+```
+class Solution {
+public:
+    vector<int> findClosestElements(vector<int>& arr, int k, int x) {
+        int left = 0;
+        int right = arr.size()-1;
+        if (arr[left]>=x){
+            //vector<int> ans (arr.begin(), arr.begin()+k);
+            vector<int> ans (arr.begin(), arr.begin() + k);
+            return ans;
+        }
+        if (arr[right]<=x){
+            vector<int> ans (arr.begin()+right-k+1, arr.begin()+right+1);
+            return ans;
+        }
+        while(left<=right){
+            int mid = left + (right-left)/2;
+            if (arr[mid]==x)
+                right=mid-1;
+            else if(arr[mid]<x)
+                left = mid +1;
+            else 
+                right = mid-1;
+        }
+        //cout<<"idx:"<<left<<endl;
+        int start = left;
+        int end  =  left;
+        while(end-start-1<k){
+            if(start<0){
+                end++;
+                continue;
+            }
+            if(end>=arr.size())
+            {
+                start--;
+                continue;
+            }
+            if(abs(x-arr[start])<=abs(arr[end]-x)){
+                start--;
+            }
+            else
+                end++;
+        }
+    vector<int> ans(arr.begin()+start+1, arr.begin()+end);
+    return ans;
+    }
+};
+```
+最终返回的是【start+1，end]，主要看循环条件的设置： **end-(start+1)<k**
+
+- **二分查找的进阶优化**： 
+    - 直接通过二分查找找到最优区间的左边界，当target位于区间内时通过收缩左边界来寻找最优结果
+    - 二分查找的模板改造：
+        1. right改为 `len-1-k`
+        2. 当target位于[mid,mid+k]区间且左边间隔大时，收缩左边界
+        3. 否则收缩右边界
+        4. 最后返回 **[left,left+k)**
+
+```class Solution {
+public:
+    vector<int> findClosestElements(vector<int>& arr, int k, int x) {
+        int left = 0;
+        int right = arr.size()-1-k;
+        if (arr[left]>=x){
+            //vector<int> ans (arr.begin(), arr.begin()+k);
+            vector<int> ans (arr.begin(), arr.begin() + k);
+            return ans;
+        }
+        if (arr[arr.size()-1]<=x){
+            vector<int> ans (arr.begin()+arr.size()-k, arr.end());
+            return ans;
+        }
+        while(left<=right){
+            int mid=left+(right-left)/2;
+            if(x-arr[mid] > arr[mid+k]-x){
+                left=mid+1;
+            }
+            else
+                right=mid-1;   
+            // cout<<'m'<<mid<<endl;
+            // cout<<'l'<<left<<endl;
+            // cout<<'r'<<right<<endl;
+        }
+
+    vector<int> ans(arr.begin()+left, arr.begin()+left+k);
+    return ans;
+    }
+};
+```
+
+
+- 其他思路：**排除法**
+    - 利用双指针，从左到右逐一删除至k个元素
+    - 时间复杂度： O(n) 线性复杂度; 空间复杂度 O(k)
+
+
+```
+class Solution {
+public:
+    vector<int> findClosestElements(vector<int>& arr, int k, int x) {
+        int left = 0;
+        int right = arr.size()-1;
+        if (arr[left]>=x){
+            //vector<int> ans (arr.begin(), arr.begin()+k);
+            vector<int> ans (arr.begin(), arr.begin() + k);
+            return ans;
+        }
+        if (arr[right]<=x){
+            vector<int> ans (arr.begin()+right-k+1, arr.begin()+right+1);
+            return ans;
+        }
+        while(right-left+1>k){
+            if(abs(x-arr[left])<=abs(arr[right]-x)){
+                right--;
+            }
+            else
+                left++;
+        }
+    vector<int> ans(arr.begin()+left, arr.begin()+left+k);
+    return ans;
+    }
+};
+```
