--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -348,3 +348,50 @@ public:
     }
 };
 ```
+
+### 162. 寻找峰值
+- 序列中重要的前提：   `nums[i] != nums[i + 1]`
+- **二分查找方法：**
+    - 通过二分方法搜小搜索空间
+    - 时间复杂度： O(logN)
+    - 比较麻烦的是：
+        - 临界点的设置： left < right；
+        - 搜索空间的方向
+
+```
+class Solution {
+public:
+    int findPeakElement(vector<int>& nums) {
+        int left = 0;
+        int right = nums.size()-1;
+
+        while(left<right){
+            int mid = left+(right-left)/2;
+            if(nums[mid]>=nums[mid+1]){
+                right=mid;
+            }else{
+                left=mid+1;
+            }
+        }
+        return right;
+    }
+};
+```
+
+- **线性搜索**
+    - 在相邻元素不相等的前提下，可以得到当`nums[i]>nums[i+1]`就一定可以找到peak
+    - 时间复杂度： O(N)
+
+```
+class Solution {
+public:
+    int findPeakElement(vector<int>& nums) {
+        for(int i=0;i<nums.size()-1;i++){
+            if(nums[i]>nums[i+1]){
+                return i;
+            }
+        }
+        return nums.size()-1;
+    }
+};
+```
