--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -355,7 +355,7 @@ public:
     - 通过二分方法搜小搜索空间
     - 时间复杂度： O(logN)
     - 比较麻烦的是：
-        - 临界点的设置： left < right；
+        - 临界点的设置： **left < right**；
         - 搜索空间的方向
 
 ```
@@ -392,6 +392,85 @@ public:
             }
         }
         return nums.size()-1;
+    }
+};
+```
+
+## 衍生题目
+### 50. Pow(x,n)
+- 实现幂计算
+- 基本思路： 直接线性循环，暴力解法可能超时
+- 基于迭代思路： `x->x^2->x^4->...`
+- 时间复杂度： O(logN) 空间复杂度：（递归栈占用）O(logN)
+```
+class Solution {
+public:
+    double cal(double x, int n){
+        if (n==0)
+            return 1.0;
+        double res = cal(x,n/2);
+        return n%2==0 ? res*res: res*res*x;
+    }
+    double myPow(double x, int n) {
+        return n>=0?cal(x,n):1.0/cal(x,-n);
+    }
+};
+```
+
+- **迭代写法** 
+- 时间复杂度同样为 O(logN) 空间复杂度为常量级别 O(1)
+
+```class Solution {
+public:
+    double cal(double x, long long n){
+        double ans = 1.0;
+        double tmp = x;
+        while(n>0){
+            if(n%2==1){
+                ans*=tmp;
+            }
+            tmp*=tmp;
+            n/=2;
+        }
+        return ans;
+    }
+    double myPow(double x, int n) {
+        long long N=n;
+        return N>=0?cal(x,N):1.0/cal(x,-N);
+    }
+};
+```
+
+### 367. 有效的完全平方数
+- 使用二分查找的基础模板完成
+- 考虑临界情况的处理：
+    - 平方溢出情况
+    - 1/0的情况
+
+```class Solution {
+public:
+    bool isPerfectSquare(int num) {
+        if(num<=1)
+            return true;
+        int left = 1;
+        int right = num/2;
+        while(left<=right){
+            int mid = left + (right-left)/2;
+            if ( (long long) mid*mid==num)
+                return true;
+            else if ((long long) mid*mid<num)
+                {
+                    left = mid+1;
+                    
+                }
+            else if ((long long )mid*mid>num)
+            {
+                right=mid-1;
+                
+            }
+        }
+        return false;
+
     }
 };
 ```
