--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -474,3 +474,34 @@ public:
     }
 };
 ```
+
+### 744. 寻找比目标字母大的最小字母
+
+- 通过二分法确定目标的右边界，返回右边界后的值即可
+- 临界处理： 当目标大于序列内的所有字母时，由于题中规定字母是循环，这种情况直接返回第一个值即可
+
+```class Solution {
+public:
+    char nextGreatestLetter(vector<char>& letters, char target) {
+        int left = 0;
+        int right = letters.size()-1;
+        while (left<=right){
+            int mid = left +(right-left)/2;
+            if(letters[mid]==target)
+                left=mid+1;
+            else if(letters[mid]>target){
+                right=mid-1;
+            }
+            else if(letters[mid]<target)
+            {
+                    left=mid+1;      
+            }
+        }
+        if (right+1<letters.size())
+            return letters[right+1];
+        else
+            return letters[0];
+
+    }
+};
+```
